examples/vgg16/README.txt


params https://www.dropbox.com/sh/dhrnqff2dt2ssax/AAD3TuQRXfcKn2OKLhCQlFmBa?dl=0

data https://www.dropbox.com/sh/dhrnqff2dt2ssax/AAD3TuQRXfcKn2OKLhCQlFmBa?dl=0

Compile time error:

./InternalData.java:36: error: code too large
  public InternalData(String weights1file,String weights2file,String weights4file,String weights5file,String weights7file,String weights8file,String weights9file,String weights11file,String weights12file,String weights13file,String weights15file,String weights16file,String weights17file,String weights20file,String weights21file,String weights22file,String bias1file,String bias2file,String bias4file,String bias5file,String bias7file,String bias8file,String bias9file,String bias11file,String bias12file,String bias13file,String bias15file,String bias16file,String bias17file,String bias20file,String bias21file,String bias22file) throws NumberFormatException, IOException {
         ^
1 error
